--- a/src/scss/themes/_top.scss
+++ b/src/scss/themes/_top.scss
@@ -151,6 +151,7 @@
 
 .testimonials {
   .testiwrapper {
+
     .testi-slider-wrapper {
       .testi-card {
         i {
@@ -201,7 +202,7 @@
       max-width: 230px;
       position: absolute;
       top: 80px;
-      left: 115px;
+      left: 36%;
     }
   }
 
@@ -210,7 +211,7 @@
 .contact-us {
   form {
     max-width: 370px;
-
+    width: 100%;
     .contact-input {
       max-width: 100%;
       margin-bottom: 32px;
@@ -278,7 +279,7 @@
 }
 
 @media (max-width: 992px) {
-  .about-wrapper {
+  .about-us {
     .row {
       background: none !important;
 
@@ -306,7 +307,13 @@
     .store-bg-wrapper {
       margin-top: 30px;
     }
+    .store-text{
+      text-align: center;
+    }
   }
+   .testi-text{
+      text-align: center;
+    }
 }
 
 @media (max-width: 768px) {
@@ -318,6 +325,9 @@
 
   .contact-us {
     padding-top: 200px;
+    form{
+      max-width: 100% !important;
+    }
   }
 
 }
@@ -340,14 +350,7 @@
   .contact-bg1, .contact-bg2{
     max-width: 200px !important;
   }
-  .about-text{
-    padding-left: 0 !important;
-  }
-  .contact-us {
-    form {
-      max-width: 100% !important;
-    }
-  }
+
   .contact-bg1, .contact-bg2{
     max-width: 200px !important;
   }
